Bug Fix #3079 - Client UI break wrapping of question text

--- a/public/less/client.less
+++ b/public/less/client.less
@@ -16,6 +16,7 @@
   font-size: 2em;
   color:#DDD;
   margin: 0 20px 20px;
+  word-wrap:break-word;
 }
 .buttonAnswers{
   list-style:none;
